add vibration and battery status plugins

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-browser": "^6.0.0",
+    "cordova-plugin-battery-status": "^2.0.3",
     "cordova-plugin-camera": "^6.0.0",
-    "cordova-plugin-ionic": "^5.5.1"
+    "cordova-plugin-ionic": "^5.5.1",
+    "cordova-plugin-vibration": "^3.1.1"
   },
   "cordova": {
     "platforms": [
@@ -24,7 +26,9 @@
       "android"
     ],
     "plugins": {
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "cordova-plugin-vibration": {},
+      "cordova-plugin-battery-status": {}
     }
   },
   "dependencies": {
